--- a/style.css
+++ b/style.css
@@ -2,12 +2,15 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: "Rubik", sans-serif;
+    -webkit-font-smoothing: antialiased;
 
 }
 
 :root {
     --bg-color: rgb(255, 255, 255);
     --purple: hwb(277 22% 5%);
+    --primary-text-color: #313e51;
     --white: #fff;
     --bg--mobile: url(./assets/images/pattern-background-mobile-light.svg);
 
@@ -59,5 +62,12 @@ header {
 
     main{
         padding: 32px 24px;
-        
+
+    } 
+
+    main h1 {
+
+    font-size: 40px;
+    font-weight: 300;
+    color: var(--primary-text-color)
     }
