--- a/style.css
+++ b/style.css
@@ -12,6 +12,8 @@
     --purple: hwb(277 22% 5%);
     --primary-text-color: #313e51;
     --white: #fff;
+    --secondary-text-color: #626c7f;
+
     --bg--mobile: url(./assets/images/pattern-background-mobile-light.svg);
 
 }
@@ -65,9 +67,26 @@ header {
 
     } 
 
-    main h1 {
+    .boas_vindas {
+        margin-bottom: 40px;
+        
+    }
+
+   .boas_vindas h1 {
 
     font-size: 40px;
     font-weight: 300;
-    color: var(--primary-text-color)
+    color: var(--primary-text-color);
+    margin-bottom: 16px;
+    }
+
+    .boas_vindas h1 strong {
+        font-weight: 500;
+    }
+
+    .boas_vindas p {
+        color: var(--secondary-text-color);
+        font-size: 14px;
+        line-height: 150%;
+        font-style: italic;
     }
