--- a/style.css
+++ b/style.css
@@ -12,6 +12,12 @@
     --purple: hwb(277 22% 5%);
     --primary-text-color: #313e51;
     --white: #fff;
+    --shadow: 0px 16px 40px 0px rgba(143, 160, 193, 0.14);
+    --bg-html: #f8e6dc;
+    --bg-css: #c6ffe4;
+    --bg-javascript: #e2e7f8; 
+    --bg-acessibilidade: #f6e7ff;
+    --button-bg: #fff;
     --secondary-text-color: #626c7f;
 
     --bg--mobile: url(./assets/images/pattern-background-mobile-light.svg);
@@ -69,7 +75,7 @@ header {
 
     .boas_vindas {
         margin-bottom: 40px;
-        
+
     }
 
    .boas_vindas h1 {
@@ -90,3 +96,41 @@ header {
         line-height: 150%;
         font-style: italic;
     }
+
+    .assuntos {
+
+        display: flex;
+        flex-direction: column;
+        gap: 12px;
+    }
+
+    .assuntos button {
+
+        border: none; 
+        background: var(--button-bg);
+        display: flex;
+        align-items: center;
+        gap: 16px;
+        padding: 12px;
+        border-radius: 12px;
+        box-shadow: var(--shadow);
+    } 
+
+    .botao_html  div {
+        background:var(--bg-html);
+
+    }
+
+    .botao_css div {
+        background: var(--bg-css);
+    }
+
+    .botao_javascript {
+        background: var(--bg-javascript); 
+    }
+
+    .botao_acessibilidade {
+        background: var(--bg-acessibilidade);
+
+    }
+
