responsividade da home finalizada

--- a/style.css
+++ b/style.css
@@ -165,21 +165,42 @@ header {
         margin-block: 81px;
       }
 
-      .tema img {
-
+      .tema { 
         
+        gap: 16px;
       }
-       
+
+
+      .tema img {
+        width: 24px;
+      }
+
+
+       .tema button {
+        width: 48px;
+        height: 28px;
+       }
+
+
+       .tema button div {
+        width: 20px;
+        height: 20px;
+
+       }
+
+
       main {
         display: flex;
         max-width: 1160px; 
         margin-inline: auto;
       }
 
+
       section {
 
         width: 100%;
       }
+
 
       .boas_vindas h1 {
 
@@ -187,28 +208,35 @@ header {
         margin-bottom: 48px;
       }
 
+
       .boas_vindas p {
 
         font-size: 20px;
       }
 
+
       .assuntos {
 
         gap: 24px;
       }
+
+
       .assuntos button {
          
         font-size: 28px;
         padding: 20px;
         gap: 32px;
       }
+
+
       .assuntos button div {
 
         width: 56px;
         height: 56px;
         padding: 8px;
       }
-          
+       
+      
     }
         
       
