--- a/pages/quiz/quiz.css
+++ b/pages/quiz/quiz.css
@@ -101,6 +101,7 @@ header {
      width: 12px;
      height: 12px;
     border-radius: 99px;
+
     } 
 
     main {
@@ -141,10 +142,12 @@ header {
         border-radius: 999px;
     }
 
+
     .alternativas form {
         display: flex;
         flex-direction: column;
         gap: 12px;
+        margin-bottom: 12px;
     }
 
     .alternativas label {
@@ -152,12 +155,55 @@ header {
         background: var(--button-bg);
         padding: 12px;
         font-size: 18px;
+        font-weight: 500;
+        border-radius: 12px;
+        box-shadow: var(--shadow);
+        color: var(--primary-text-color);
+    }
+
+    .alternativas label:has(input:checked) {
+        
+
+
     }
 
     .alternativas input {
         display: none;
     }
 
+    .alternativas div {
+     display: flex;
+    align-items: center;
+     gap: 16px;
+
+    }
+
+  .alternativas div span {
+    display: block;
+    width: 40px;
+    height: 40px;
+    background: var(--bg-color);
+    border-radius: 5px;
+    color: var(--secondary-text-color);
+    
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-shrink: 0;
+  }
+
+  .alternativas button {
+    padding: 16px;
+    border-radius: 12px;
+    border: none;
+    background: var(--purple);
+    color: var(--white);
+    width: 100%;
+
+    font-size: 18px;
+    font-weight: 500;
+  }
+      
     @media(min-width: 1100px) {
         .tema { 
             gap: 16px;
