--- a/pages/quiz/quiz.css
+++ b/pages/quiz/quiz.css
@@ -12,18 +12,18 @@
     --bg-color: #f4f5fa;
     --purple: #a729f5;
     --primary-text-color: #313e51;
-    --white: #fff;
+    --secondary-text-color: #626c7f;
+    --button-bg: #fff;
     --shadow: 0px 16px 40px 0px rgba(143, 160, 193, 0.14);
     --bg-html: #f8e6dc;
-    --bg-css: #c6ffe4;
-    --bg-javascript: #c5d4ff; 
+    --bg-css: #c6ffe4; 
     --bg-acessibilidade: #dfb5f7;
-    --button-bg: #fff;
-    --secondary-text-color: #626c7f;
+    -bg-javascript: #c5d4ff;
+    --white: #fff;
+    --green: #26d782;
+    --red: #ee5454;
     --bg-mobile: url(../../assets/images/pattern-background-mobile-light.svg);
     --bg-desktop: url(../../assets/images/pattern-background-desktop-light.svg);
-    
-
 }
 
 
@@ -162,10 +162,17 @@ header {
     }
 
     .alternativas label:has(input:checked) {
-        
+        outline: 3px solid var(--purple);
 
+        & span {
+            background: var(--purple);
+            color: var(--white);
+        }
 
     }
+       
+
+    
 
     .alternativas input {
         display: none;
