--- a/pages/quiz/quiz.css
+++ b/pages/quiz/quiz.css
@@ -172,7 +172,23 @@ header {
     }
        
 
-    
+    .alternativas label#correta { 
+        outline: 3px solid var(--green);
+
+        & span {
+            background: var(--green);
+            color: var(--white);
+        }
+    }
+
+    .alternativas label#errada {
+        outline: 3px solid var(--red);
+
+        & span {
+            background: var(--red);
+            color: var(--white);
+        }
+    }
 
     .alternativas input {
         display: none;
