--- a/pages/quiz/quiz.css
+++ b/pages/quiz/quiz.css
@@ -10,7 +10,8 @@
 
 :root {
     --bg-color: #f4f5fa;
-    --purple: #a729f5;
+    --purple: #dd29f5;
+    --purple-hover: rgba(167, 41, 245, 0.7);
     --primary-text-color: #313e51;
     --secondary-text-color: #626c7f;
     --button-bg: #fff;
@@ -159,6 +160,16 @@ header {
         border-radius: 12px;
         box-shadow: var(--shadow);
         color: var(--primary-text-color);
+        cursor:  pointer;
+    }
+
+    .alternativas label:hover {
+        & span {
+            background: var(--bg-acessibilidade);
+            color: var(--purple);
+
+        }
+       
     }
 
     .alternativas label:has(input:checked) {
@@ -225,6 +236,12 @@ header {
 
     font-size: 18px;
     font-weight: 500;
+    transition: background 0.3s;
+  }
+
+  .alternativas button:hover {
+    background: var(--purple-hover);
+    cursor: pointer;
   }
       
     @media(min-width: 1100px) {
@@ -307,6 +324,7 @@ header {
            .alternativas label {
             font-size: 22px;
             padding: 18px 20px;
+            border-radius: 24px;
            }
 
            .alternativas div {
