--- a/pages/quiz/quiz.css
+++ b/pages/quiz/quiz.css
@@ -10,6 +10,8 @@
 
 :root {
     --bg-color: #f4f5fa;
+    --bg-span: #f5f5f5;
+    --color-span: #626c7f;
     --purple: #dd29f5;
     --purple-hover: rgba(167, 41, 245, 0.7);
     --primary-text-color: #313e51;
@@ -123,7 +125,7 @@ header {
     .pergunta h2 {
         font-size: 20px;
         font-weight: 500;
-        color: var(--primary-text-color)
+        color: var(--primary-text-color);
         line-height: 24px;
         margin-bottom: 24px;
     }
@@ -216,9 +218,9 @@ header {
     display: block;
     width: 40px;
     height: 40px;
-    background: var(--bg-color);
+    background: var(--bg-span);
     border-radius: 5px;
-    color: var(--secondary-text-color);
+    color: var(--color-span);
     
     display: flex;
     align-items: center;
