--- a/pages/resultados/resultado.css
+++ b/pages/resultados/resultado.css
@@ -16,7 +16,7 @@
     --purple-hover: rgba(167, 41, 245, 0.7);
     --primary-text-color: #313e51;
     --secondary-text-color: #626c7f;
-    --button-bg: #fff;
+    --pontuacao-bg: #fff;
     --shadow: 0px 16px 40px 0px rgba(143, 160, 193, 0.14);
     --bg-html: #f8e6dc;
     --bg-css: #c6ffe4; 
@@ -35,7 +35,7 @@
     --bg-mobile: url(../../assets/images/pattern-background-mobile-dark.svg);
     --bg-desktop: url(../../assets/images/pattern-background-desktop-dark.svg);
     --primary-text-color: #fff;
-    --button-bg: #344358;
+    --pontuacao-bg: #344358;
     --secondary-text-color: #abc1e1;
     --shadow: 0px 16px 40px 0px #rgba(49,62,81,0.14);
  }
@@ -106,6 +106,44 @@ header {
     border-radius: 99px;
 
     } 
+
+    main {
+        padding: 32px 24px;
+    }
+
+    main h2 {
+        font-size: 40px;
+        font-weight: 300;
+        color: var(--primary-text-color);
+        margin-bottom: 40px;
+    }
+
+    main h2 strong {
+        font-weight: 500;
+    }
+
+    .pontuacao {
+        background: var(--pontuacao-bg);
+        padding: 3px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        gap: 16px;
+        border-radius: 12px;
+        margin-bottom: 12px;
+    }
+
+
+    .pontuacao strong {
+        font-size: 88px;
+        color: var(--primary-text-color);
+        font-weight: 500;
+    }
+
+    .pontuacao p {
+        color: var(--secondary-text-color);
+        font-size: 18px;
+    }
 
     @media(min-width: 1100px) {
         
