--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@
 
 
 body.escuro {
-  --bg-color: #313e51;
+  --bg-color: #2a3444;
   --bg-mobile: url(./assets/images/pattern-background-mobile-dark.svg);
   --bg-desktop: url(./assets/images/pattern-background-desktop-dark.svg);
   --primary-text-color: #fff;
@@ -35,7 +35,6 @@ body.escuro {
 }
 
 body {
-
     height: 100svh;
     background: var(--bg-mobile) var(--bg-color);
     background-repeat: no-repeat;
@@ -44,12 +43,12 @@ body {
 
 
 header {
-
     padding: 16px 24px;
     display: flex;
-    justify-content: flex-end;
+    justify-content: flex-end; 
     max-width: 1160px;
-    margin-inline: auto;
+    align-items: center;
+    gap: 8px;
 }
 
 .tema {
@@ -71,183 +70,176 @@ header {
     border: 0;
     border-radius: 999px;
     padding: 4px;
-
 }
 
+
 .tema button div {
-  background: var(--white);
-     width: 12px;
-     height: 12px;
-    border-radius: 99px;
+   background: var(--white);
+   width: 12px;
+   height: 12px;
+   border-radius: 999px;
 }
   
 
-    main{
-        padding: 32px 24px;
+main{
+   padding: 32px 24px;
 
-    } 
+ } 
 
-    .boas_vindas {
-        margin-bottom: 40px;
+.boas_vindas {
+   margin-bottom: 40px;
 
+ }
+
+.boas_vindas h1 {
+  font-size: 40px;
+  font-weight: 300;
+  color: var(--primary-text-color);
+  margin-bottom: 16px;
     }
 
-   .boas_vindas h1 {
+.boas_vindas h1 strong {
+   font-weight: 500;
+ }
 
-    font-size: 40px;
-    font-weight: 300;
-    color: var(--primary-text-color);
-    margin-bottom: 16px;
+.boas_vindas p {
+   color: var(--secondary-text-color);
+   font-size: 14px;
+   line-height: 150%;
+   font-style: italic;
     }
 
-    .boas_vindas h1 strong {
-        font-weight: 500;
-    }
+.assuntos {
+   display: flex;
+   flex-direction: column;
+   gap: 12px;
+  }
 
-    .boas_vindas p {
-        color: var(--secondary-text-color);
-        font-size: 14px;
-        line-height: 150%;
-        font-style: italic;
-    }
+.assuntos button {
+   border: none; 
+   background: var(--button-bg);
+   display: flex;
+   align-items: center;
+   gap: 16px;
+   padding: 12px;
+   border-radius: 12px;
+   box-shadow: var(--shadow);
+   font-size: 18px;
+   font-weight: 500;
+   color: var(--primary-text-color);
+ } 
 
-    .assuntos {
+.assuntos button div {
+   width: 40px;
+   height: 40px;
+   padding: 5px;
+   border-radius: 5px; 
+ }
 
-        display: flex;
-        flex-direction: column;
-        gap: 12px;
-    }
+.assuntos button img {
+   width: 100%;
+  }
+.botao_html div {
+   background:var(--bg-html);
 
-    .assuntos button {
+  }
 
-        border: none; 
-        background: var(--button-bg);
-        display: flex;
-        align-items: center;
-        gap: 16px;
-        padding: 12px;
-        border-radius: 12px;
-        box-shadow: var(--shadow);
-        font-size: 18px;
-        font-weight: 500;
-        color: var(--primary-text-color);
-    } 
+.botao_css div {
+   background: var(--bg-css);
+  }
 
-    .assuntos button div {
-      width: 40px;
-      height: 40px;
-      padding: 5px;
-      border-radius: 5px; 
-    }
-
-   .assuntos button img {
-    width: 100%;
-   }
-    .botao_html div {
-        background:var(--bg-html);
-
-    }
-
-    .botao_css div {
-        background: var(--bg-css);
-    }
-
-    .botao_javascript div {
-        background: var(--bg-javascript);
+.botao_javascript div {
+   background: var(--bg-javascript);
         
-    }
+ }
 
-    .botao_acessibilidade div {
-        background: var(--bg-acessibilidade);
+.botao_acessibilidade div {
+   background: var(--bg-acessibilidade);
 
-    }
+ }
 
-    @media(min-width: 1100px) {
+  @media(min-width: 1100px) {
 
-        body {
-            background: var(--bg-desktop);
-            background-size: cover;
-            background-repeat: no-repeat;
+  body {
+   background: var(--bg-desktop);
+   background-size: cover;
+   background-repeat: no-repeat;
 
-        }
+ }
     
 
-      header {
-        margin-block: 81px;
-      }
+  header {
+   margin-block: 81px;
+ }
 
-      .tema { 
-        gap: 16px;
-      }
-
-
-      .tema img {
-        width: 24px;
-      }
+.tema { 
+  gap: 16px;
+  }
 
 
-       .tema button {
-        width: 48px;
-        height: 28px;
-       }
+.tema img {
+  width: 24px;
+ }
 
 
-       .tema button div {
-        width: 20px;
-        height: 20px;
-
-       }
-
-
-      main {
-        display: flex;
-        max-width: 1160px; 
-        margin-inline: auto;
-      }
+.tema button {
+  width: 48px;
+  height: 28px;
+ }
 
 
-      section {
+.tema button div {
+  width: 20px;
+  height: 20px;
 
-        width: 100%;
-      }
-
-
-      .boas_vindas h1 {
-
-        font-size: 64px; 
-        margin-bottom: 48px;
-      }
+ }
 
 
-      .boas_vindas p {
-
-        font-size: 20px;
-      }
-
-
-      .assuntos {
-
-        gap: 24px;
-      }
+ main {
+  display: flex;
+  max-width: 1160px; 
+  margin-inline: auto;
+ }
 
 
-      .assuntos button {
-         
-        font-size: 28px;
-        padding: 20px;
-        gap: 32px;
-      }
+section {
+ width: 100%;
+ }
 
 
-      .assuntos button div {
+.boas_vindas h1 {
+ font-size: 64px; 
+ margin-bottom: 48px;
+ }
 
-        width: 56px;
-        height: 56px;
-        padding: 8px;
-      }
-       
-      
-    }
+
+.boas_vindas p {
+ font-size: 20px;
+ }
+
+
+.assuntos {
+ gap: 24px;
+ }
+
+
+.assuntos button {
+ font-size: 28px;
+ padding: 20px;
+ gap: 32px;
+
+ }
+ 
+ 
+.assuntos button div {
+ width: 56px;
+ height: 56px;
+ padding: 8px;
+
+}
+ 
+          
+ }
         
       
     
