--- a/pages/quiz/quiz.css
+++ b/pages/quiz/quiz.css
@@ -96,6 +96,8 @@ header {
     border: 0;
     border-radius: 999px;
     padding: 4px;
+    display: flex;
+    cursor: pointer;
 
 }
 
@@ -247,7 +249,6 @@ header {
   }
       
     @media(min-width: 1100px) {
-
         body {
             background: var(--bg-desktop) var(--bg-color);
             background-size: cover;
